fix content wrapping on small screens

--- a/site/src/component/CoursePreview/CourseSummary.scss
+++ b/site/src/component/CoursePreview/CourseSummary.scss
@@ -60,5 +60,6 @@
     font-weight: 500;
     gap: 10px;
     margin-bottom: 16px;
+    flex-wrap: wrap;
   }
 }
